--- a/course_styles.user.css
+++ b/course_styles.user.css
@@ -272,15 +272,17 @@ body.learningAnalytics #pageTitleDiv .statusContainer.itemStatus::before {
   border-color: #53618f;
   color: #fff;
 }
-
 body.tol_learningModulePage #contentPanel #tocCart,
-a.tocItem::after{
+a.tocItem::after, #globalNavPageContentArea .contentPaneWide #content.contentBox{
     background-color: #2f3136 !important;
-    color: #fff
+    color: #b9bbbe
 }
 #tocTree li>a.tocItem, #tocTree li>span, #tocTree li a.tocItem.itemActive{
     color: #7289da !important;
 }
 #content .vtbegenerated p span,.navPageTitle{
-    color: #fff !important;
+    color: #b9bbbe !important;
+}
+.label, .attachments.clearfix{
+    color: #b9bbbe
 }
