--- a/course_styles.user.css
+++ b/course_styles.user.css
@@ -280,7 +280,10 @@ a.tocItem::after, #globalNavPageContentArea .contentPaneWide #content.contentBox
 #tocTree li>a.tocItem, #tocTree li>span, #tocTree li a.tocItem.itemActive{
     color: #7289da !important;
 }
-#content .vtbegenerated p,#content .vtbegenerated p span,.navPageTitle{
+#content.contentBox .vtbegenerated, 
+#content .vtbegenerated p,
+#content .vtbegenerated p span,
+.navPageTitle{
     color: #b9bbbe !important;
 }
 .label, .attachments.clearfix{
